# omp-mpi-tests

./: CMakeLists.txt  LICENSE  README.md
mpi/: CMakeLists.txt  test_mpi.c
mpi_omp/: CMakeLists.txt  test_mpi_omp.c
omp/: CMakeLists.txt  test_omp.c
